[tool.poetry]
name = "painel-marmoraria"
version = "0.1.0"
description = "Um painel para a MG Marmoraria para facilitar a medição no  orçamento dentre diversas outras possibilidades."
authors = ["Delcor <matheusdelcorbm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.1"
fpdf = "^1.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
